Fixed title alignment issue

--- a/src/styles/blocks/_for-whom.scss
+++ b/src/styles/blocks/_for-whom.scss
@@ -94,6 +94,7 @@ FOR WHOM
     &-title {
       position: relative;
 
+      align-self: flex-start;
       padding-top: 76px;
 
       @include mediaDesktop {
